# innie

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
agent/innie/: SKILL.md
agent/innie/agents/: openai.yaml
assets/demo/: README.md  generate_innie_flow_gif.py
assets/logo/: README.md
docs/: initial-plan.md  pypi-release.md  slack-setup.md
docs/superpowers/plans/: 2026-05-22-milestone-2-harness-adapter-progress.md  2026-05-23-claude-harness-resume.md  2026-05-24-slack-file-support.md
docs/superpowers/specs/: 2026-05-24-slack-file-support-design.md
scripts/: install.py
src/innie/: __init__.py  bootstrap.py  cleanup.py  cli.py  config.py  control.py  db.py  harness.py  hooks.py  inbox.py  pipeline.py  progress.py  prompting.py  run_logging.py  runner.py  runtime.py  runtime_state.py  runtime_terminal.py  runtime_worker.py  sessions.py  slack_client.py  slack_events.py  slack_files.py  slack_mcp.py  slack_mcp_config.py  slack_setup.py  slack_socket.py  tasks.py  terminal_ui.py
src/innie/adapters/: __init__.py  claude.py  codex.py  echo.py
src/innie/dash/: __init__.py  health.py  logs.py  server.py  store.py
src/innie/dash/web/: app.js  index.html  styles.css
src/innie/prompts/: __init__.py  harness_system_prompt.md
tests/: dash_fixtures.py  test_agent_skill.py  test_bootstrap.py  test_claude_adapter.py  test_cleanup.py  test_cli_cleanup.py  test_cli_init.py  test_cli_inspection.py  test_cli_run.py  test_codex_adapter.py  test_control.py  test_dash_api.py  test_dash_cli.py  test_dash_frontend_contract.py  test_dash_logs.py  test_dash_packaging.py  test_dash_store.py  test_echo_adapter.py  test_harness.py  test_hooks.py  test_inbox.py  test_install_script.py  test_milestone1_acceptance.py  test_milestone2_acceptance.py  test_milestone4_acceptance.py  test_package_metadata.py  test_progress.py  test_prompting.py  test_prompts.py  test_run_logging.py  test_runner.py  test_runtime.py  test_runtime_terminal.py  test_secret_store.py  test_sessions.py  test_slack_client.py  test_slack_events.py  test_slack_files.py  test_slack_mcp.py  test_slack_setup.py  (+2 more)
