[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "innie"
version = "0.1.0"
description = "Slack-first sidekick layer for durable AI work sessions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Innie Contributors" }]
dependencies = [
    "aiohttp>=3.13.5",
    "slack-sdk>=3.41.0",
]

[project.scripts]
innie = "innie.cli:main"
